pod-cm.yml
---
# Criacao de POD
apiVersion: v1
kind: Pod
metadata:
  name: web
spec:
  volumes:
  - name: config-volume
    configMap:
      name: slim-air
  containers:
  - name: pod
    image: httpd:alpine
    ports:
    - containerPort: 80
    volumeMounts:
    - name: config-volume
      mountPath: /propaganda
